NEXT-1214 - Save selection of duplicate media options

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.less
@@ -109,6 +109,7 @@
     }
 
     .sw-modal__body {
+        word-break: break-word;
         padding: 20px 30px;
         position: relative;
     }
