--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -11,6 +11,7 @@
                     @sw-media-upload-media-upload-success="successfulUpload"
                     @sw-media-upload-new-uploads-added="onUploadsAdded"
                     @sw-media-upload-media-upload-failure="onUploadFailed"
+                    @sw-media-upload-media-replaced="onMediaReplaced"
                     @sw-media-upload-open-sidebar="onMediaUploadButtonOpenSidebar">
             </sw-media-upload>
         {% endblock %}
