--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.html.twig
@@ -135,6 +135,8 @@
             <sw-media-modal-duplicate-media
                 v-if="showDuplicatedMediaModal"
                 :item="errorFiles[0].entity"
+                :additionalErrorCount="errorFiles.length - 1"
+                :defaultOption="getDefaultDuplicateMediaOption()"
                 @sw-media-modal-duplicate-media-close="cancelDuplicateMedia"
                 @sw-media-modal-duplicate-media-resolve="retryUpload">
             </sw-media-modal-duplicate-media>
