NTR - Fix variant error in sw-color-badge

--- a/Resources/administration/src/app/component/utils/sw-color-badge/sw-color-badge.less
+++ b/Resources/administration/src/app/component/utils/sw-color-badge/sw-color-badge.less
@@ -22,7 +22,8 @@
         background-color: @sw-color-badge-color-warning;
     }
 
-    &.is--error {
+    &.is--error,
+    &.is--danger {
         background-color: @sw-color-badge-color-error;
     }
 
