--- a/Resources/administration/src/app/component/media/sw-media-folder-content/sw-media-folder-content.less
+++ b/Resources/administration/src/app/component/media/sw-media-folder-content/sw-media-folder-content.less
@@ -34,9 +34,8 @@
             }
         }
 
-        .is--selected {
+        &.is--selected {
             background-color: @color-cadet-blue;
-            color: @color-shopware-blue;
         }
     }
 
