--- a/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-snippet/page/sw-settings-snippet-list/sw-settings-snippet-list.html.twig
@@ -141,29 +141,26 @@
                                                 </span>
                                                 {% block sw_settings_snippet_list_delete_modal_grid %}
                                                     <sw-grid :items="resetItems"
-                                                             @sw-grid-select-item="onModalSelectionChanged"
-                                                             @sw-grid-select-all="onModalSelectionChanged"
+                                                             @sw-grid-select-item="onSelectionChanged"
+                                                             @sw-grid-select-all="onSelectionChanged"
                                                              table>
                                                         {% block sw_settings_snippet_list_delete_modal_grid_template %}
                                                             <template slot="columns" slot-scope="{ item }">
                                                                 {% block sw_settings_snippet_list_delete_modal_grid_name %}
                                                                     <sw-grid-column :label="$tc('sw-settings-snippet.list.columnHeaderGridColumTitleSet')"
-                                                                                    flex="minmax(150px, 1fr)"
-                                                                                    dataIndex="setName">
+                                                                                    flex="minmax(150px, 1fr)">
                                                                         {{ item.setName }}
                                                                     </sw-grid-column>
                                                                 {% endblock %}
                                                                 {% block sw_settings_snippet_list_delete_modal_grid_value %}
                                                                     <sw-grid-column :label="$tc('sw-settings-snippet.list.columnValue')"
-                                                                                    flex="minmax(50px,1fr)"
-                                                                                    dataIndex="value">
+                                                                                    flex="minmax(50px,1fr)">
                                                                         {{ item.value }}
                                                                     </sw-grid-column>
                                                                 {% endblock %}
                                                                 {% block sw_settings_snippet_list_delete_modal_grid_origin %}
                                                                     <sw-grid-column :label="$tc('sw-settings-snippet.list.columnHeaderResetTo')"
-                                                                                    flex="minmax(50px,1fr)"
-                                                                                    dataIndex="origin">
+                                                                                    flex="minmax(50px,1fr)">
                                                                         {{ item.origin }}
                                                                     </sw-grid-column>
                                                                 {% endblock %}
