--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -1,50 +1,36 @@
 {% block sw_media_sidebar %}
     <div class="sw-media-sidebar">
-        {% block sw_media_sidebar_sidebar %}
-            <sw-sidebar>
-                {% block sw_media_sidebar_item_quickinfo %}
-                    <sw-sidebar-item
-                        icon="default-action-document-view"
-                        :title="$tc('sw-media.sidebar.actions.quickInfo')"
-                        ref="quickInfoButton"
-                        :disabled="!hasItems">
+        {% block sw_media_sidebar_item_quickinfo_content %}
+            <div class="sw-media-sidebar__quickinfo-wrapper">
+                <sw-media-quickinfo
+                    v-if="isSingleFile"
+                    :item="items[0]"
+                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
+                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                    @sw-media-quickinfo-open-folder-settings="openFolderSettings"
+                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                    @sw-media-quickinfo-open-folder-move="openModalMove">
+                </sw-media-quickinfo>
 
-                        {% block sw_media_sidebar_item_quickinfo_content %}
-                            <div class="sw-media-sidebar__quickinfo-wrapper">
-                                <sw-media-quickinfo
-                                    v-if="isSingleFile"
-                                    :key="getKey"
-                                    :item="items[0]"
-                                    :autoplay="autoplay"
-                                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
-                                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                                    @sw-media-quickinfo-open-folder-settings="openFolderSettings"
-                                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                                    @sw-media-quickinfo-open-folder-move="openModalMove">
-                                </sw-media-quickinfo>
+                <sw-media-quickinfo-multiple
+                    v-else-if="isMultipleFile"
+                    :items="items"
+                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                    @sw-media-quickinfo-open-folder-move="openModalMove">
+                </sw-media-quickinfo-multiple>
 
-                                <sw-media-quickinfo-multiple
-                                    v-else-if="isMultipleFile"
-                                    :items="items"
-                                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
-                                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
-                                    @sw-media-quickinfo-open-folder-move="openModalMove">
-                                </sw-media-quickinfo-multiple>
-                            </div>
-                        {% endblock %}
-                    </sw-sidebar-item>
-                {% endblock %}
+                <sw-media-quickinfo v-else-if="currentFolder"
+                    :item="currentFolder"
+                    @sw-media-quickinfo-open-modal-replace="openModalReplace"
+                    @sw-media-quickinfo-open-modal-delete="openModalDelete"
+                    @sw-media-quickinfo-open-folder-settings="openFolderSettings"
+                    @sw-media-quickinfo-open-folder-dissolve="openFolderDissolve"
+                    @sw-media-quickinfo-open-folder-move="openModalMove">>
+                </sw-media-quickinfo>
+                <div v-else> TODO: Illustration keine Medien sobald verfügbar...</div>
 
-                {% block sw_media_sidebar_item_delete %}
-                    <sw-sidebar-item
-                        icon="default-action-trash"
-                        :title="$tc('sw-media.sidebar.actions.delete')"
-                        :disabled="!showDeleteButton"
-                        position="bottom"
-                        @click="openModalDelete">
-                    </sw-sidebar-item>
-                {% endblock %}
-            </sw-sidebar>
+            </div>
         {% endblock %}
 
         {% block sw_media_sidebar_modal_replace %}
